--- a/Lieblingsschmerz.html
+++ b/Lieblingsschmerz.html
@@ -5,6 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 
 <title>💌Mein Lieblingsschmerz💌</title>
+  <link rel="icon" type="image/png" href="favicon.png">
+<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+<meta name="theme-color" content="#ff4b6e">
+
 <style>
   :root{
     --rose:#ff4b6e; --rose-2:#ff8aa3; --champ:#fff6f0; --ink:#1f2a3a; --paper:#fffaf6;
@@ -893,3 +897,4 @@ Donyam az “donya” tabdil shode be to (Roya) 💫🩵.`;
 </script>
 </body>
 </html>
+
