--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <meta charset="utf-8">
 <title>Loading…</title>
+<link rel="icon" type="image/png" href="favicon.png">
+<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+<meta name="theme-color" content="#ff4b6e">
 <meta http-equiv="refresh" content="0; url=Lieblingsschmerz.html">
 <script>
   // فallback سریع برای بعضی مرورگرها
@@ -10,4 +13,5 @@
   Redirecting… If not redirected,
   <a href="Lieblingsschmerz.html">click here</a>.
 </p>
+
 
